kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hola-desde-service
spec:
  selector:
    app: hola-desde-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
